crates/edgezero-macros/tests/ui/secret_on_option_non_string.stderr
error: `#[secret]` may only annotate `String` or `Option<String>`
 --> tests/ui/secret_on_option_non_string.rs:7:16
  |
7 |     api_token: Option<u32>,
  |                ^^^^^^^^^^^
